--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
@@ -27,8 +27,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #201c1c;
+  background: #f7f7f7; /* Updated to a light background color */
   overflow-x: hidden;
+  font-family: 'Montserrat', sans-serif;
 }
 
 :root {
@@ -65,10 +66,3 @@ body {
   width: 100%;
 }
 
-.font-noun {
-  font-family: "Londrina Solid", sans-serif;
-}
-
-.font-theme {
-  font-family: "PT Sans", sans-serif;
-}
